--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,14 @@
     font-size: 7vw;
     margin-top: 0;
   }
+  h2 {
+    font-size: 2em;
+  }
   a {
-    color: #f00;
+    color: #6397b5;
+  }
+  p {
+    line-height: 1.5;
   }
   h2 ~ p {
     font-size: 0.8em;
@@ -161,6 +167,21 @@
     padding-top: 10vh;
   }
 
+  .full-hero:after {
+    bottom: 2vh;
+    border: 10px solid;
+    border-color: #fff transparent transparent;
+    color: #fff;
+    content: "";
+    height: 0;
+    /* font-weight: bold; */
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, 0);
+    width: 0;
+  }
+
+
   .hero-home {
     background-image: url(/images/shark.jpg);
     background-position: center top;
@@ -180,6 +201,7 @@
     font-size: 7vw;
     margin-bottom: 0.25em;
   }
+
 
   .hero-content .social-link {
     background-color: rgba(255, 255, 255, 0.8);
@@ -218,6 +240,30 @@
     margin: 0 0.5em;
   }
 
+  /* HOMEPAGE STYLES */
+.home-section {
+  margin: 6rem auto;
+  max-width: 980px;
+  width: 90vw;
+}
+.home-section h2 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.home-callout {
+  background-color: #000;
+  color: #fff;
+  padding: 7vh 0;
+}
+.callout-title {
+  font-size: 5.75vw;
+  text-align: right;
+  text-transform: uppercase;
+}
+.callout-copy {
+  font-size: 0.8rem;
+}
+
   /* BIO STYLES */
   .bio-wrapper {
     font-size: 24px;
@@ -226,29 +272,29 @@
     overflow: hidden;
   }
   .bio-box {
-    border: 1px solid black;
-    box-sizing: border-box;
-    float: left;
-    font-size: 1rem;
-    margin: 40px 1% 0;
-    padding: 2%;
-    width: 23%;
-  }
+  box-sizing: border-box;
+  float: left;
+  font-size: 1rem;
+  margin: 6rem 0 0;
+  padding: 0 3%;
+  width: 33%;
+}
   .bio-box h3 {
     color: #fff;
     font-size: 1.5em;
     margin: -40px 0 1em;
     text-align: center;
+    text-transform: uppercase;
   }
   .bio-box img {
     width: 100%;
   }
   .bio-box .social-link {
     display: block;
-    margin: 2em 0 1em;
+    margin: 2em auto 1em;
   }
   .bio-copy {
-    font-size: 1em;
+    font-size: 0.75em;
   }
   .bio-copy a {
     color: green;
